welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value position
			position = i
                        ^indexOfMaxValue:10: error: not found: value position
	return position
               ^