welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var valeur: Int = 0
	var positon: Int = 1
	for (i <- 0 to nums.length-1) {
		if ( nums(i) > valeur ) {
			valeur = nums(i)
			position = i
		}
	}
	return position
}
